--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,21 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- validation -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
+		</dependency>
+		<!-- aspectj -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.9.7</version>
 		</dependency>
 		<!-- Mybatis -->
 		<dependency>
