mybatis结果转驼峰

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ nacos.discovery.enabled=${NACOS_ENABLED:false}
 
 #log4j2
 logging.config=classpath:log4j2.xml
+
+#Mybatis
+#下划线转驼峰
+mybatis.configuration.map-underscore-to-camel-case=true
